--- a/.github/workflows/360_t7_18.06.yml
+++ b/.github/workflows/360_t7_18.06.yml
@@ -22,7 +22,7 @@ on:
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrtARM
   REPO_BRANCH: mt7981
-  FEEDS_CONF: feeds.conf.default
+  FEEDS_CONF: custom/cmiot_ax18/feeds.conf.default
   CONFIG_FILE: ./config/cmiot_ax18/360_t7.config
   DIY_P1_SH: ./custom/cmiot_ax18/plus/diy-part1.sh
   DIY_P2_SH: ./custom/cmiot_ax18/plus/diy-part2.sh
