--- a/.github/workflows/360_t7_5.15.yml
+++ b/.github/workflows/360_t7_5.15.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: redmi_ax6_nowifi
+name: 360_t7_5.15
 
 on:
   repository_dispatch:
@@ -20,12 +20,12 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/lede.git
-  REPO_BRANCH: redmi_ax6
+  REPO_URL: https://github.com/1715173329/imoutowrt
+  REPO_BRANCH: master-mt7981-t7
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: ./config/redmi_ax6/redmi_ax6_nowifi.config
-  DIY_P1_SH: ./custom/redmi_ax6/nowifi/diy-part1.sh
-  DIY_P2_SH: ./custom/redmi_ax6/nowifi/diy-part2.sh
+  CONFIG_FILE: ./config/cmiot_ax18/360_t7_basic.config
+  DIY_P1_SH: ./custom/cmiot_ax18/basic/diy-part1.sh
+  DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
