--- a/.github/workflows/360_t7_21.02.yml
+++ b/.github/workflows/360_t7_21.02.yml
@@ -28,10 +28,10 @@ env:
   DIY_P2_SH: ./custom/cmiot_ax18/basic/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: false
-  UPLOAD_WETRANSFER: false
-  UPLOAD_RELEASE: true
+  UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
+  FILE_NAME: mt7981
+  PRODUCT_NAME: 360t7_18.06
 
 jobs:
   build:
