--- a/h3c-nx30pro.config
+++ b/h3c-nx30pro.config
@@ -134,6 +134,7 @@ CONFIG_PACKAGE_blkid=m
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_blockdev=m
 CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
